[package]
name = "ilc-rs"
version = "0.1.0"
edition = "2021"
description = "Ideal-Lattice-Compression for Ring-LWE public key compression"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha3 = "0.10"
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "compression"
harness = false
